tests/fixtures/typescript/expressions/spread/invalid_position/input_invalid_spread_assignment.svelte
<script lang="ts">
	x = ...a;
</script>
